# bggPlotly

./: .gitignore  CONFIG.py  app.py  logger.py  pyproject.toml
assets/: basegame.pkl
components/: collection_sidebar.py  kpi_cards.py  table.py
components/__pycache__/: collection_sidebar.py
dat/users/: cgustad.csv
pages/: admin.py  collection.py
src/Classes/: users.py
src/bgg/: #parse.py#  .#parse.py  games.py  parse.py  users.py
src/content/: content.py
src/sidebar/: sidebar.py
